[project]
name = "colourswatch"
version = "2026.1"
description = "Use this module to read, and write to a number of colour palette file formats"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "FredHappyface" }]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]

dependencies = [
	"colormath>=3.0.0,<4",
	"PyYAML>=6.0.1,<7",
	"defusedxml>=0.7.1,<2",
	"Pillow>=10.2.0,<12",
	"tomlkit>=0.12.4,<2",
	"swatch>=0.4.0,<2",
	"tomli>=2.0.1,<3",
]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/ColourSwatch"
Repository = "https://github.com/FHPythonUtils/ColourSwatch"
Documentation = "https://github.com/FHPythonUtils/ColourSwatch/blob/master/README.md"

[dependency-groups]
dev = [
	"pytest>=8.1.1,<9",
	"coverage>=7.4.4,<8",
	"ruff>=0.3.3,<0.4",
	"pyright>=1.1.356,<2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "colourswatch"
module-root = ""

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101",  # type annotation for self in method
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pytest.ini_options]
filterwarnings = [
	"ignore::SyntaxWarning:colormath.*",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py313
    py312
	py311
	py310

[testenv]
deps = pytest
commands = pytest tests
"""
